--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "builds": [
     {
       "src": "./build/index.js",
-      "use": "@vercel/node"
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest":"/"
+      "dest":"/build/index.js"
     }
   ]
  }
